--- a/01-color-flipper/setup/index.html
+++ b/01-color-flipper/setup/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>color flipper</h1>
+    <div class="container">
+    <h1>Color flipper</h1>
+    <button class="btn" id="btn">Cambiar color</button>
+    <p>Color actual: <span class="color">#FFFFFF</span></p>
+    </div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
