varios ejerc resueltos

--- a/04-navbar/setup/index.html
+++ b/04-navbar/setup/index.html
@@ -14,7 +14,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>navbar project</h1>
+    <nav class="navbar">
+        <a href="#" class="navbar.logo">Barra de navegacion</a>
+        <ul class="navbar-links">
+          <li><a href="#home">Inicio</a></li>
+          <li><a href="#about">Acerca de</a></li>
+          <li><a href="#services">Servicios</a></li>
+          <li><a href="#contact">Contacto</a></li>
+        </ul>
+        <button class="navbar-toggle">
+          <i class="fas fa-bars"></i>
+        </button>
+    </nav>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
