--- a/02-counter/setup/index.html
+++ b/02-counter/setup/index.html
@@ -7,10 +7,20 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
+
   </head>
   <body>
-    <h1>your code goes here</h1>
-    <!-- javascript -->
-    <script src="app.js"></script>
+    <div class="container">
+      <h1>Counter</h1>
+      <span id="value">0</span>
+      <div class="button-container">
+        <button class="btn decrease">Disminuir</button>
+        <button class="btn reset">Reset</button>
+        <button class="btn increase">Aumentar</button>
+      </div>
+      <!-- javascript -->
+      <script src="app.js"></script>
+    </div>
+    
   </body>
 </html>
