--- a/Web_Maire/Maire_desde_cero/index.html
+++ b/Web_Maire/Maire_desde_cero/index.html
@@ -40,12 +40,13 @@
     <section class="pantalla-final">
         <div class="circulo-final">
             <p>
-                En Maire somos artesanos digitales.<br>
-                Creamos experiencias digitales centradas en lo movil y lo humano.
+                En Maire somos <br>
+                <em>artesanos digitales</em>.<br>
+                Creamos experiencias digitales centradas en lo <em>móvil</em> y lo <em>humano</em>.
             </p>
         </div>
     </section>
-
+    
+    <script src="script.js"></script>
 </body>
 </html>
-<script src="script.js"></script>
